--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Locentra</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script src="https://api.tempolabs.ai/proxy-asset?url=https://storage.googleapis.com/tempo-public-assets/error-handling.js"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="https://prj_L7wB9KzPkLMz3lWVrWNj9FtvqErk.supabase.co/storage/v1/object/public/public-assets/logo2.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Locentra</title>
+</head>
