--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="https://prj_L7wB9KzPkLMz3lWVrWNj9FtvqErk.supabase.co/storage/v1/object/public/public-assets/logo2.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Locentra</title>
-</head>
+<link
+  rel="icon"
+  type="image/png"
+  href="https://nlgiukcwbexfxkzdvzzq.supabase.co/storage/v1/object/public/public-assets/logo2.png"
+/>
+<title>Locentra</title>
