--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<link
-  rel="icon"
-  type="image/png"
-  href="https://nlgiukcwbexfxkzdvzzq.supabase.co/storage/v1/object/public/public-assets/logo2.png"
-/>
-<title>Locentra</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://nlgiukcwbexfxkzdvzzq.supabase.co/storage/v1/object/public/public-assets/logo2.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Locentra</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
